Fixed scrolling
Scrolling now appears and disappears when content is too large for the
page.

--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,7 @@ body {
 	background-color: black;
 	color: white;
 	overflow: none;
+	position: fixed;
 	font-family: 'Merriweather', serif;
 	font-weight: 300;
 }
